Google maps implementation for trip detail screen to navigate on real map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -423,4 +423,27 @@
     <string name="location_9_address" translatable="false">111 Waverly Way, Kirkland, WA 98033</string>
     <string name="location_description_text_label">Text label</string>
     <string name="location_phone_not_available" translatable="false">n/a</string>
+    <string name="navigation_active" translatable="false">Navigating...</string>
+    <string name="navigation_arrived" translatable="false">Arrived!</string>
+
+    <string name="settings_section_a_label" translatable="false">Section A</string>
+    <string name="settings_section_b_label" translatable="false">Section B</string>
+    <string name="settings_title" translatable="false">Settings</string>
+    <string name="settings_one_label" translatable="false">Setting One</string>
+    <string name="settings_one_pref" translatable="false">setting_one</string>
+    <string name="settings_two_label" translatable="false">Setting Two</string>
+    <string name="settings_two_pref" translatable="false">setting_two</string>
+    <string name="settings_three_label" translatable="false">Setting Three</string>
+    <string name="settings_three_pref" translatable="false">setting_three</string>
+    <string name="settings_four_label" translatable="false">Setting Four</string>
+    <string name="settings_four_pref" translatable="false">setting_four</string>
+    <string name="settings_five_label" translatable="false">Setting Five</string>
+    <string name="settings_five_pref" translatable="false">setting_five</string>
+    <string name="settings_six_label" translatable="false">Setting Six</string>
+    <string name="settings_six_pref" translatable="false">setting_six</string>
+    <string name="home_destination_label" translatable="false">Home</string>
+    <string name="work_destination_label" translatable="false">Work</string>
+    <string name="navigation_rerouting" translatable="false">Rerouting...</string>
+    <string name="route_preview" translatable="false">Routes</string>
+
 </resources>
